fix: ajuste de url na tela de cadastro

--- a/Cadastro/cadastro.html
+++ b/Cadastro/cadastro.html
@@ -37,7 +37,7 @@
         <input type="password" id="confirmPassword" placeholder="Confirm Password">
 
        <a class="btn-cadastro" href="../Site Pagina Inicial 2.0/Site curso/homepage/index.html">Registrar</a> 
-      <a class="btn-cadastro" href="../LoginUsuario/login.html">Voltar para a tela de Login</a> 
+      <a class="btn-cadastro" href="../index.html">Voltar para a tela de Login</a> 
       </form>
     </div>
     <div class="image-box">
